--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="40dp"
-                android:text="@string/modificaProfilo" />
+                android:text="@string/update_profile" />
 
             <Button
                 android:id="@+id/myReviewsBtn"
@@ -45,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="40dp"
-                android:text="@string/modificaProfilo" />
+                android:text="@string/my_reviews" />
 
             <LinearLayout
                 android:layout_width="match_parent"
