--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -37,7 +37,7 @@
 
 
                 <Button
-                    android:id="@+id/myReview"
+                    android:id="@+id/myReviewsBtn"
                     style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="165dp"
                     android:layout_height="wrap_content"
