--- a/app/src/main/res/layout/my_profile.xml
+++ b/app/src/main/res/layout/my_profile.xml
@@ -78,7 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -103,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -151,7 +151,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
@@ -199,7 +199,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="prova"
+                    android:text=""
                     android:textAppearance="?attr/textAppearanceHeadline5" />
 
 
