upper case message

--- a/app/src/main/res/layout/password_update_activity.xml
+++ b/app/src/main/res/layout/password_update_activity.xml
@@ -36,7 +36,7 @@
         app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="new password"
+        android:hint="New password"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
@@ -50,7 +50,7 @@
         app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="confirm password"
+        android:hint="Confirm password"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
