new review page added

--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -155,8 +155,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_marginTop="20dp"
                 android:background="@color/quantum_purple700"
-                android:text="Invio" />
+                android:text="Invio"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </ScrollView>
