--- a/app/src/main/res/layout/admin_only_activity.xml
+++ b/app/src/main/res/layout/admin_only_activity.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="20dp"
     android:paddingEnd="20dp">
@@ -22,25 +20,28 @@
         android:id="@+id/username_txi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/white"
         android:hint="Username"
         android:layout_marginTop="40dp"
-        android:textColorHint="@color/white"
         >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/quantum_purple700"
+            android:textColor="@color/white"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/enterBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_gravity="right"
-        android:text="enter" />
+        android:layout_marginTop="20dp"
+        android:text="enter"
+        android:textColor="@color/white" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
