update psw work ok, bug in add review

--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -97,7 +97,7 @@
         </RatingBar>
 
         <Button
-            android:id="@+id/changePassword"
+            android:id="@+id/enter_Btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
