--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -151,7 +151,7 @@
 
 
             <Button
-                android:id="@+id/changePassword"
+                android:id="@+id/enter_Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
