--- a/app/src/main/res/layout/password_update_activity.xml
+++ b/app/src/main/res/layout/password_update_activity.xml
@@ -66,7 +66,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
     <Button
-        android:id="@+id/changePassword"
+        android:id="@+id/enter_Btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
