--- a/app/src/main/res/layout/password_update_activity.xml
+++ b/app/src/main/res/layout/password_update_activity.xml
@@ -22,7 +22,7 @@
         app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Old password"
+        android:hint="@string/old_password"
         android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
 
@@ -39,7 +39,7 @@
         app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="New password"
+        android:hint="@string/new_password"
         android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
@@ -55,7 +55,7 @@
         app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Confirm password"
+        android:hint="@string/confirm_password"
         android:textColorHint="@color/white"
         android:layout_marginTop="40dp">
         <com.google.android.material.textfield.TextInputEditText
