--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -40,12 +40,13 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:layout_marginTop="20sp"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:layout_marginTop="20sp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="0.5" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
