--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -89,10 +89,9 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@color/quantum_purple700"
-            android:contentDescription="@string/rating_review"
             android:clickable="true"
-            android:rating="1"
-            >
+            android:contentDescription="@string/rating_review"
+            android:rating="1">
 
         </RatingBar>
 
