--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -14,11 +14,33 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="355dp"
+            android:layout_height="403dp"
             android:orientation="vertical"
             android:weightSum="5"
             android:background="@color/quantum_purple700">
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/deleteReviewBtn"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/delete">
+
+                </ImageButton>
+
+                <ImageButton
+                    android:id="@+id/updateReviewBtn"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+
+                    android:src="@drawable/modifica">
+
+                </ImageButton>
+            </LinearLayout>
             <TextView
                 android:id="@+id/username_review"
                 android:layout_width="match_parent"
