fixed some visual bug

--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:hint="@string/description"
+            android:hint="@string/text"
             android:textColorHint="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
